			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.1765 2001/07/11 09:16:27 suz Exp $

<200107>
Wed Jul 11 17:55:33 JST 2001	suz@sdl.hitachi.co.jp
	* kame/kame/pim6sd: added SSM (Source-Specific-Multicast) mode 
	  for SSM prefix (ff20::/12 and ff30::/12).
	  from Mickael Hoerdt <hoerdt@clarinet.u-strasbg.fr>.
		+ supports MLDv2 as well as MLDv1 (cfparse.y, cftoken.l,
		  mld6*.[ch], timer.c, vif.[ch])
		+ uses SPT for multicast address in SSM range
		  (inet6.[ch], mrt.c, pim6*.[ch], route.c)

	* kame/kame/pim6sd/BUGS.V6
	- write down ToDos suggested in the above patch.

Tue Jul 10 15:34:09 JST 2001  itojun@iijlab.net
	* netbsd: switch to NetBSD-1.5.1 from NetBSD-1.5.

Mon Jul  9 23:01:10 JST 2001 sakane@kame.net
	* kame/racoon:
	- print all of rejected attributes in phase 1 proposal when no suitable
	  proposal are found.  suggested by <mcr@sandelman.ottawa.on.ca>
	- fixed not to increment the transform number in phase 1 proposal.
	  it was degraded.

Fri Jul  6 19:52:59 2001  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
	* kame/sys/netinet6/ip6_fw.c: fragmented packets processing logic
	  was wrong. reviewd by: ume

Fri Jul  6 15:17:25 JST 2001  itojun@iijlab.net
	* netbsd/sys/sys/systm.h: declare ovbcopy() for better code sharing.

Fri Jul  6 14:37:30 JST 2001	suz@sdl.hitachi.co.jp
	* freebsd4/usr.bin/v6test: added v6test to FreeBSD4-KAME

Fri Jul  6 08:33:30 JST 2001  itojun@iijlab.net
	* sys/netinet/ip6.h: IP6_EXTHRD_GET0() did not check the mbuf length,
	  when off == 0.  noone was using this macro.

2001-07-05  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* bsdi4/sys/net/if_tun.c (tunifioctl): returned EAFNOSUPPORT if
	the SIOCSIFADDR command is issued for an unsupported address
	family (i.e. all AFs except AF_INET).  This helps the IPv6 layer
	detect the unavailability of the interface before going further on
	initialization, and, as a result, suppress unexpected warning
	messages.

Wed Jul  4 16:02:26 JST 2001  itojun@iijlab.net